// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button color 1`] = `
<div role="dialog" class="buri-dialog" name="buri-dialog-bounce">
  <div class="buri-hairline--top buri-dialog__footer buri-dialog__footer--buttons"><button class="buri-button buri-button--default buri-button--large buri-dialog__cancel" style="color: white;"><span class="buri-button__text">取消</span></button><button class="buri-button buri-button--default buri-button--large buri-dialog__confirm buri-hairline--left" style="color: red;"><span class="buri-button__text">确认</span></button></div>
</div>
`;

exports[`button text 1`] = `
<div role="dialog" class="buri-dialog" name="buri-dialog-bounce">
  <div class="buri-hairline--top buri-dialog__footer buri-dialog__footer--buttons"><button class="buri-button buri-button--default buri-button--large buri-dialog__cancel"><span class="buri-button__text">Custom cancel</span></button><button class="buri-button buri-button--default buri-button--large buri-dialog__confirm buri-hairline--left"><span class="buri-button__text">Custom confirm</span></button></div>
</div>
`;

exports[`default slot 1`] = `
<div role="dialog" class="buri-dialog" name="buri-dialog-bounce">
  <div class="buri-dialog__content">Custom Message</div>
  <div class="buri-hairline--top buri-dialog__footer"><button class="buri-button buri-button--default buri-button--large buri-dialog__confirm"><span class="buri-button__text">确认</span></button></div>
</div>
`;

exports[`title slot 1`] = `
<div role="dialog" class="buri-dialog" name="buri-dialog-bounce">
  <div class="buri-dialog__header buri-dialog__header--isolated">Custom Title</div>
  <div class="buri-hairline--top buri-dialog__footer"><button class="buri-button buri-button--default buri-button--large buri-dialog__confirm"><span class="buri-button__text">确认</span></button></div>
</div>
`;
